# marklite

./: .gitignore  LICENSE  PKGBUILD  README.md  meson.build  pyproject.toml  release.sh
data/: de.singular.marklite.desktop.in  de.singular.marklite.metainfo.xml  de.singular.stenmark.desktop.in  de.singular.stenmark.metainfo.xml  meson.build
marklite/: __init__.py  __init__.py.in  __main__.py  app.py  document_panel.py  editor.py  file_watcher.py  html_template.py  markdown_renderer.py  meson.build  settings_dialog.py  settings_manager.py  sidebar.py  viewer.py  welcome.py  window.py
marklite/data/: de.singular.marklite.gresource  de.singular.marklite.gresource.xml
marklite/data/editor/: package-lock.json  package.json
stenmark/: __init__.py  __init__.py.in  __main__.py  app.py  document_panel.py  editor.py  frontmatter.py  html_template.py  markdown_renderer.py  meson.build  search_panel.py  settings_dialog.py  settings_manager.py  sidebar.py  tag_index.py  tag_panel.py  viewer.py  welcome.py  window.py
stenmark/data/: de.singular.stenmark.gresource.xml
stenmark/data/editor/: editor.html  package-lock.json  package.json
