[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stenmark"
version = "0.1.0"
description = "A lightweight GTK4 Markdown organizer and editor"
requires-python = ">=3.10"
dependencies = [
    "markdown",
    "pygments",
]

[project.scripts]
stenmark = "stenmark.__main__:main"

[tool.setuptools.packages.find]
include = ["stenmark*"]
