marklite_sources = [
  '__init__.py',
  '__main__.py',
  'app.py',
  'editor.py',
  'file_watcher.py',
  'html_template.py',
  'markdown_renderer.py',
  'settings_dialog.py',
  'settings_manager.py',
  'sidebar.py',
  'viewer.py',
  'window.py',
]

install_data(marklite_sources, install_dir: moduledir)
